[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "graba-reunion"
version = "0.2.0"
description = "Graba micrófono + monitor PulseAudio y transcribe con diarización (WhisperX)"
requires-python = ">=3.10"
license = "MIT"
keywords = ["audio", "pulseaudio", "ffmpeg", "whisper", "recording", "diarization"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
diarize = ["whisperx"]

[project.scripts]
graba-reunion = "graba_reunion.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["src/graba_reunion"]
